# github-sdv-poc-raspberry-azure-iot-bridge

./: .gitmodules  CMakeLists.txt  Dockerfile
resources/configs/: main_config.json
src/: main.cpp
test/: .gitignore
